samples/_failures_safe/1761246499_2c825e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d167ca34.c: In function ‘main’:
./samples/SAFE/__tmp_d167ca34.c:154:34: error: ‘decomp’ undeclared (first use in this function)
  154 |     fwrite(decompressed.data, 1, decomp
      |                                  ^~~~~~
./samples/SAFE/__tmp_d167ca34.c:154:34: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_d167ca34.c:154:40: error: expected ‘)’ at end of input
  154 |     fwrite(decompressed.data, 1, decomp
      |           ~                            ^
      |                                        )
./samples/SAFE/__tmp_d167ca34.c:154:5: error: too few arguments to function ‘fwrite’
  154 |     fwrite(decompressed.data, 1, decomp
      |     ^~~~~~
In file included from ./samples/SAFE/__tmp_d167ca34.c:2:
/usr/include/stdio.h:745:15: note: declared here
  745 | extern size_t fwrite (const void *__restrict __ptr, size_t __size,
      |               ^~~~~~
./samples/SAFE/__tmp_d167ca34.c:154:5: error: expected declaration or statement at end of input
  154 |     fwrite(decompressed.data, 1, decomp
      |     ^~~~~~
